# contacts

./: .gitignore  CHANGELOG.md  CMakeLists.txt  config.h.in  contact_repository.c  elm_ext.c  main.c  ui_create.c  ui_list.c  ui_show.c
include/: config.h  contact_repository.h  elm_ext.h  main.h  ui_create.h  ui_list.h  ui_show.h
